--- a/home/wiki/Dashboard/Image_databases.html
+++ b/home/wiki/Dashboard/Image_databases.html
@@ -2970,7 +2970,7 @@
         <span class="mw-cite-backlink"><a href="#cite_ref-folder_example_7-0">^</a></span> <span class="reference-text">For simplicity's sake, these instructions use a root folder of <code>C:\xowa</code> for all examples. Please adjust as necessary for Linux / Mac OS X.</span>
       </li>
       <li id="cite_note-xowa_folders-8">
-        <span class="mw-cite-backlink">^ <sup><a href="#cite_ref-xowa_folders_8-0">a</a></sup> <sup><a href="#cite_ref-xowa_folders_8-2">c</a></sup></span> <span class="reference-text">Note the following types of folders:</span>
+        <span class="mw-cite-backlink"><a href="#cite_ref-xowa_folders_8-0">^</a></span> <span class="reference-text">Note the following types of folders:</span>
         <ul>
           <li>
             <span class="reference-text"><b>Root folder</b></span>
