--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -46,7 +46,7 @@
           version:
         </td>
         <td>
-          3.6.4.1 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
+          3.7.2.1 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
         </td>
       </tr>
       <tr>
@@ -54,7 +54,7 @@
           build_date:
         </td>
         <td>
-          2016-06-26 02:13
+          2016-07-10 01:50
         </td>
       </tr>
       <tr>
@@ -227,6 +227,9 @@
                 <ul>
                   <li>
                     HTTP Web Server
+                  </li>
+                  <li>
+                    <a href="https://github.com/Mattze96/mwad" rel="nofollow" class="external text">mwad</a>
                   </li>
                 </ul>
               </td>
