--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -218,6 +218,9 @@
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_32" title="App/Setup/Flash card" class="xowa-visited">Installing to a flash card</a>
             </li>
+            <li>
+              <a href="http://xowa.org/home/wiki/App/Import/mwad.html" id="xolnki_33" title="App/Import/mwad">Generating a dump by</a> <a href="https://github.com/Mattze96/mwad" rel="nofollow" class="external text">mwad</a>
+            </li>
           </ul>
         </td>
       </tr>
@@ -233,10 +236,10 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Code.html" id="xolnki_33" title="Dev/Code">Source code</a>
+              <a href="http://xowa.org/home/wiki/Dev/Code.html" id="xolnki_34" title="Dev/Code">Source code</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Installation/Notes.html" id="xolnki_34" title="App/Setup/Installation/Notes">Dev environment</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Installation/Notes.html" id="xolnki_35" title="App/Setup/Installation/Notes">Dev environment</a>
             </li>
           </ul>
         </td>
@@ -246,25 +249,25 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_35" title="App/Category">Category</a>
+              <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_36" title="App/Category">Category</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Scribunto.html" id="xolnki_36" title="App/Xtn/Mediawiki/Scribunto">Scribunto</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Scribunto.html" id="xolnki_37" title="App/Xtn/Mediawiki/Scribunto">Scribunto</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Math/MathJax.html" id="xolnki_37" title="App/Xtn/Mediawiki/Math/MathJax">MathJax</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Math/MathJax.html" id="xolnki_38" title="App/Xtn/Mediawiki/Math/MathJax">MathJax</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Score.html" id="xolnki_38" title="App/Xtn/Mediawiki/Score">Score</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Score.html" id="xolnki_39" title="App/Xtn/Mediawiki/Score">Score</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Html/Scripts.html" id="xolnki_39" title="App/Xtn/Html/Scripts">Sortable/collapsible tables</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Html/Scripts.html" id="xolnki_40" title="App/Xtn/Html/Scripts">Sortable/collapsible tables</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_40" title="App/Xtn/Import/Dansguardian">Dansguardian filter</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_41" title="App/Xtn/Import/Dansguardian">Dansguardian filter</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_41" title="App/Xtn/Browser/XOWA viewer" class="xowa-visited">Firefox Addon</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_42" title="App/Xtn/Browser/XOWA viewer" class="xowa-visited">Firefox Addon</a>
             </li>
           </ul>
         </td>
@@ -274,10 +277,10 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_42" title="Diagnostics">Diagnostics</a>
+              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics">Diagnostics</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Installation/Self_extracting_exe.html" id="xolnki_43" title="App/Setup/Installation/Self extracting exe">Self extracting exe</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Installation/Self_extracting_exe.html" id="xolnki_44" title="App/Setup/Installation/Self extracting exe">Self extracting exe</a>
             </li>
           </ul>
         </td>
@@ -294,13 +297,13 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_44" title="Help/FAQs">FAQs</a>
+              <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_45" title="Help/FAQs">FAQs</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Contributing.html" id="xolnki_45" title="Help/Contributing">Contributing</a>
+              <a href="http://xowa.org/home/wiki/Help/Contributing.html" id="xolnki_46" title="Help/Contributing">Contributing</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_46" title="Help/Feedback" class="xowa-visited">Feedback</a>
+              <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_47" title="Help/Feedback" class="xowa-visited">Feedback</a>
             </li>
           </ul>
         </td>
@@ -310,16 +313,16 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_47" title="Help/License/Code">License/Code</a>
+              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_48" title="Help/License/Code">License/Code</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_48" title="Help/License/Docs">License/Docs</a>
+              <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_49" title="Help/License/Docs">License/Docs</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Privacy/Desktop.html" id="xolnki_49" title="Help/Privacy/Desktop">Privacy</a>
+              <a href="http://xowa.org/home/wiki/Help/Privacy/Desktop.html" id="xolnki_50" title="Help/Privacy/Desktop">Privacy</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Security.html" id="xolnki_50" title="Help/Security">Security</a>
+              <a href="http://xowa.org/home/wiki/Help/Security.html" id="xolnki_51" title="Help/Security">Security</a>
             </li>
           </ul>
         </td>
@@ -329,10 +332,10 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_51" title="Help/Release schedule">Release schedule</a>
+              <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_52" title="Help/Release schedule">Release schedule</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Roadmap.html" id="xolnki_52" title="Help/Roadmap">Roadmap</a>
+              <a href="http://xowa.org/home/wiki/Help/Roadmap.html" id="xolnki_53" title="Help/Roadmap">Roadmap</a>
             </li>
           </ul>
         </td>
@@ -349,54 +352,54 @@
         <td style='width:90%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Archive/App/UI/Main_window_layout.html" id="xolnki_53" title="Archive/App/UI/Main window layout">Window layout</a>
+              <a href="http://xowa.org/home/wiki/Archive/App/UI/Main_window_layout.html" id="xolnki_54" title="Archive/App/UI/Main window layout">Window layout</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_54" title="Dev/Design/Database" class="xowa-visited">Dev/Design/Database</a>
+              <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_55" title="Dev/Design/Database" class="xowa-visited">Dev/Design/Database</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Environment/Text_editor.html" id="xolnki_55" title="Dev/Environment/Text editor">Dev/Environment/Text editor</a>
+              <a href="http://xowa.org/home/wiki/Dev/Environment/Text_editor.html" id="xolnki_56" title="Dev/Environment/Text editor">Dev/Environment/Text editor</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_56" title="App/UI/Find box">App/UI/Find box</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_57" title="App/UI/Find box">App/UI/Find box</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_57" title="App/Import/Removal">Removal</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_58" title="App/Import/Removal">Removal</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_58" title="App/Import/Offline">Import/Using_data_dump_files</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_59" title="App/Import/Offline">Import/Using_data_dump_files</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Manual.html" id="xolnki_59" title="App/Import/Manual">Import/Manual</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Manual.html" id="xolnki_60" title="App/Import/Manual">Import/Manual</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_60" title="App/Wiki types/Wikidata">Wikis/Wikidata</a>
+              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_61" title="App/Wiki types/Wikidata">Wikis/Wikidata</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Wiki_types/Commons.html" id="xolnki_61" title="App/Wiki types/Commons">Wikis/Commons</a>
+              <a href="http://xowa.org/home/wiki/App/Wiki_types/Commons.html" id="xolnki_62" title="App/Wiki types/Commons">Wikis/Commons</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_62" title="App/Basics/Files">Files</a>
+              <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_63" title="App/Basics/Files">Files</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Android.html" id="xolnki_63" title="App/Xtn/Android">Android/Alpha</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Android.html" id="xolnki_64" title="App/Xtn/Android">Android/Alpha</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Design/CSS.html" id="xolnki_64" title="Dev/Design/CSS">Dev/Design/CSS</a>
+              <a href="http://xowa.org/home/wiki/Dev/Design/CSS.html" id="xolnki_65" title="Dev/Design/CSS">Dev/Design/CSS</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Design/Site_config.html" id="xolnki_65" title="Dev/Design/Site config">Dev/Design/Site_config</a>
+              <a href="http://xowa.org/home/wiki/Dev/Design/Site_config.html" id="xolnki_66" title="Dev/Design/Site config">Dev/Design/Site_config</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Archive/Help/Known_issues.html" id="xolnki_66" title="Archive/Help/Known issues">Archive/Help/Known issues</a>
+              <a href="http://xowa.org/home/wiki/Archive/Help/Known_issues.html" id="xolnki_67" title="Archive/Help/Known issues">Archive/Help/Known issues</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Printing.html" id="xolnki_67" title="App/UI/Printing">Printing</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Printing.html" id="xolnki_68" title="App/UI/Printing">Printing</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Download/Aria2.html" id="xolnki_68" title="App/Import/Download/Aria2">Aria2</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Download/Aria2.html" id="xolnki_69" title="App/Import/Download/Aria2">Aria2</a>
             </li>
           </ul>
         </td>
