--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -28,10 +28,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_windows_64_v3.7.1.2.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_windows_64_v3.7.2.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_windows_v3.7.1.2.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_windows_v3.7.2.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -39,10 +39,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_linux_64_v3.7.1.2.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_linux_64_v3.7.2.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_linux_v3.7.1.2.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_linux_v3.7.2.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -50,10 +50,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_macosx_64_v3.7.1.2.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_macosx_64_v3.7.2.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_macosx_v3.7.1.2.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_macosx_v3.7.2.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -61,7 +61,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_arm_v3.7.1.2.zip" rel="nofollow" class="external text">Raspberry Pi</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_arm_v3.7.2.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
       </li>
     </ul>
     <h2>
@@ -69,7 +69,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.1.2/xowa_app_android_v3.7.1.2.apk" rel="nofollow" class="external text">Android</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.2.1/xowa_app_android_v3.7.2.1.apk" rel="nofollow" class="external text">Android</a>
       </li>
     </ul>
     <h2>
@@ -77,7 +77,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.7.1.2.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
+        <a href="https://github.com/gnosygnu/xowa/archive/v3.7.2.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
       </li>
     </ul>
     <h2>
@@ -89,27 +89,14 @@
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="v3.7.1.2_.282017-07-03.29">v3.7.1.2 (2017-07-03)</span>
-    </h2>
-    <ul>
-      <li>
-        Search: Do not fail when searching for multiple words. [broken since: v3.6.3.1] {detected by William; Ope30}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Cast double to int to handle HTML dumps from 2016-05 and earlier.
-      </dd>
-    </dl>
-    <h2>
-      <span class="mw-headline" id="v3.7.1.1_.282017-07-03.29">v3.7.1.1 (2017-07-03)</span>
+      <span class="mw-headline" id="v3.7.2.1_.282017-07-10.29">v3.7.2.1 (2017-07-10)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="Wiki">Wiki</span>
     </h3>
     <ul>
       <li>
-        Wiki: Publish 2016-06 German Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews.
+        Wiki: Publish Haitian wikis. {requested by NickRance}
       </li>
     </ul>
     <h3>
@@ -120,17 +107,32 @@
     </p>
     <ul>
       <li>
-        HtmlView: Support Gallery.
+        Import: Fix 2016-07 English Wikipedia import failing.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Édouard_Manet" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Édouard_Manet</a> <a href="https://en.wikipedia.org/wiki/List_of_tallest_buildings_in_the_world" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/List_of_tallest_buildings_in_the_world</a> <a href="https://en.wikipedia.org/wiki/National_Gallery_of_Art" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/National_Gallery_of_Art</a>
+        <span style='font-variant:small-caps'>Resolved by</span>: Search for "PRIMARY KEY" if "UNIQUE KEY" is missing.
       </dd>
     </dl>
     <ul>
       <li>
-        DownloadCentral: Show error message if error during download; also allow resume.
+        HtmlView: Support Table Of Contents.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Import: Include mwad (MediaWiki API dump) for creating XML dumps for Wikia and other wikis. {contributed by Mattze96}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Import/mwad.html" id="xolnki_3" title="App/Import/mwad">App/Import/mwad</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Install: Require Java 1.7, not Java 1.8. [broken since: v3.3.4.1]
       </li>
     </ul>
     <p>
@@ -138,160 +140,106 @@
     </p>
     <ul>
       <li>
-        UI: Add Ctrl+P as default keyboard shortcut for Print.
+        Wikibase: Fix script error for "Module:Wikidata:500 unknown datavalue type." on many ht.w pages.
       </li>
     </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Change "wikibase-entityid" to "wikibase-item".
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Example</span>: Erreur de script: =Module:Wikidata:500 unknown datavalue type..
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://ht.wikipedia.org/wiki/Srilanka" rel="nofollow" class="external free">https://ht.wikipedia.org/wiki/Srilanka</a>
+      </dd>
+    </dl>
     <ul>
       <li>
-        UI: Automatically save zoom level when using Ctrl+Wheel_Up, Ctrl+Wheel_Down. {detected by Ope30}
+        Wikibase: Show specieswiki links in "In Other Languages". [broken since: v3.6.4.1]
       </li>
     </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Change "specieswiki" abbreviation from ".species" to "species".
+      </dd>
+    </dl>
     <ul>
       <li>
-        UI: Restore font size for tab buttons.
+        Special: Enable delete on Special:XowaWikiInfo.
       </li>
     </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaWikiInfo%3Fwiki%3Dsimple.wikipedia.org.html" id="xolnki_4" title="Special:XowaWikiInfo?wiki=simple.wikipedia.org" class="xowa-visited">Special:XowaWikiInfo?wiki=simple.wikipedia.org</a>
+      </dd>
+    </dl>
     <p>
       <b>trivial</b>
     </p>
     <ul>
       <li>
-        Log: Add logging statements for search.
+        Wikibase: Add "jamwiki" to list of known wikis.
       </li>
     </ul>
     <ul>
       <li>
-        Hzip: Skip manual &lt;h2&gt; if &lt;span&gt; does not have id.
+        Lang: Add new languages: aeb-arab; aeb-latn; dty; gor; lki; olo.
       </li>
     </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Portail:Nord-Amérindiens/Image_sélectionnée</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Hzip: Skip manual &lt;h2&gt; if &lt;h2&gt; has atrs.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Wikipédia:LiveRC/ToDo</a>
-      </dd>
-    </dl>
     <h3>
-      <span class="mw-headline" id="Android_2">Android</span>
+      <span class="mw-headline" id="Server">Server</span>
     </h3>
     <p>
       <b>major</b>
     </p>
     <ul>
       <li>
-        Setup: Detect external storage card for certain devices (BLU-STUDIO C 5+5 LTE).
+        HTTP Server: Fix images not showing when using "text" databases. [broken since: v3.6.3.4] {detected by ve3lst}
       </li>
     </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Try "SECONDARY_STORAGE" environment variable if present.
-      </dd>
-    </dl>
+    <h3>
+      <span class="mw-headline" id="Android_2">Android</span>
+    </h3>
     <p>
-      <b>major</b>
+      <b>minor</b>
     </p>
     <ul>
       <li>
-        DownloadCentral: Fix WAKE_LOCK not being acquired / released.
+        HtmlView: Ignore Table of Content markers.
       </li>
     </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Always release WAKE_LOCK when task is done; remove WAKE_LOCK from internal hash.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        DownloadCentral: Fix negative progress when restarting after failed task.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Reset progress at cmd level upon failure.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Log: Retain only most recent 8 log files.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        General: Do not crash when opening new tab and English Wikipedia is not installed.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Use 1st installed wiki if English Wikipedia is not available.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        General: Do not crash when reloading page but SD card has been removed.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Add try / catch to Page__on_load_end.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        General: Do not crash when opening wiki but wiki has been deleted.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Add try / catch to OfflinePageStrategy.
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        General: Do not crash when reloading tab but page does not exist.
-      </li>
-    </ul>
-    <p>
-      <b>trivial</b>
-    </p>
-    <ul>
-      <li>
-        Redlinks: Fix null ref in logs when opening special pages.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Set "en" as language for home wiki.
-      </dd>
-    </dl>
     <h3>
       <span class="mw-headline" id="Dev">Dev</span>
     </h3>
     <ul>
       <li>
-        Source: Fix compilation issues with Eclipse Neon.
+        Php_parser: Parse "[" and "]" as array.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Split classes into separate files.
+        <span style='font-variant:small-caps'>Example</span>: ['a', 'b'] == array('a', 'b').
       </dd>
     </dl>
     <ul>
       <li>
-        Source: Refactor gallery classes.
+        Source: Make parser code thread safe.
       </li>
     </ul>
     <ul>
       <li>
-        Source: Make Xop_amp_mgr thread safe.
+        Source: Change Scrib_core from static to instance.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Source: Refactor Xoa_ttl.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Source: Consolidate Redirect methods on Page.
       </li>
     </ul>
   
