--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,28 +82,29 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.7.1.2 features the following:
+      v3.7.2.1 features the following:
     </p>
     <ul>
       <li>
-        (PC &amp; Android) Fix broken search for multiple words in 2016-05 wikis and earlier
-      </li>
-    </ul>
-    <p>
-      v3.7.1.1 features the following:
-    </p>
-    <ul>
-      <li>
-        (Wiki) 2016-06 German Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews
+        (Wiki) Publish 2016-07 Haitian Wikipedia
       </li>
       <li>
-        (PC) Support Gallery
+        (PC) Fix 2016-07 English Wikipedia import failure
       </li>
       <li>
-        (PC &amp; Android) More minor fixes for Download Central including connection disruption and WAKE_LOCK fixes
+        (Server) Fix images not showing for Wikitext databases
       </li>
       <li>
-        (Android) Multiple fixes for severe crashes
+        (PC) Add Table of Contents support for HTML databases on the PC
+      </li>
+      <li>
+        (PC) Include mwad (MediaWiki API dump) for creating XML dumps for Wikia and other wikis {contributed by Mattze96}
+      </li>
+      <li>
+        (PC) Fix minor Wikibase issues, including wikibase-item
+      </li>
+      <li>
+        (PC) Target Java 1.7, not Java 1.8
       </li>
     </ul>
     <p>
