--- a/home/wiki/Options/Language.html
+++ b/home/wiki/Options/Language.html
@@ -338,6 +338,12 @@ li.active a, li.active a:hover
                 <option value='aeb'>
                   زَوُن [aeb]
                 </option>
+                <option value='aeb-arab'>
+                  زَوُن [aeb-arab]
+                </option>
+                <option value='aeb-latn'>
+                  زَوُن [aeb-latn]
+                </option>
                 <option value='af'>
                   Afrikaans [af]
                 </option>
@@ -587,6 +593,9 @@ li.active a, li.active a:hover
                 <option value='dtp'>
                   Dusun Bundu-liwan [dtp]
                 </option>
+                <option value='dty'>
+                  Dotyali [dty]
+                </option>
                 <option value='dv'>
                   ދިވެހިބަސް [dv]
                 </option>
@@ -712,6 +721,9 @@ li.active a, li.active a:hover
                 </option>
                 <option value='gom-latn'>
                   कोंकणी (Latin) [gom-latn]
+                </option>
+                <option value='gor'>
+                  Gor [gor]
                 </option>
                 <option value='got'>
                   𐌲𐌿𐍄𐌹𐍃𐌺 [got]
@@ -992,6 +1004,9 @@ li.active a, li.active a:hover
                 <option value='liv'>
                   Līvõ kēļ [liv]
                 </option>
+                <option value='lki'>
+                  Laki [lki]
+                </option>
                 <option value='lmo'>
                   Lumbaart [lmo]
                 </option>
@@ -1165,6 +1180,9 @@ li.active a, li.active a:hover
                 </option>
                 <option value='oc'>
                   Occitan [oc]
+                </option>
+                <option value='olo'>
+                  Olo [olo]
                 </option>
                 <option value='om'>
                   Oromoo [om]
