--- a/home/wiki/Change_log/v3.7.2.1.html
+++ b/home/wiki/Change_log/v3.7.2.1.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Diagnostics/Xtns/Wikivoyage/All - XOWA</title>
+  <title>Change log/v3.7.2.1 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,119 +11,195 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Diagnostics/Xtns/Wikivoyage/All</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Change log/v3.7.2.1</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
+    <div id="toc" class="toc">
+      <div id="toctitle">
+        <h2>
+          Contents
+        </h2>
+      </div>
+      <ul>
+        <li class="toclevel-1 tocsection-1">
+          <a href="#v3.7.2.1_.282017-07-10.29"><span class="tocnumber">1</span> <span class="toctext">v3.7.2.1 (2017-07-10)</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-2">
+              <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-3">
+              <a href="#PC"><span class="tocnumber">1.2</span> <span class="toctext">PC</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-4">
+              <a href="#Server"><span class="tocnumber">1.3</span> <span class="toctext">Server</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-5">
+              <a href="#Android"><span class="tocnumber">1.4</span> <span class="toctext">Android</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-6">
+              <a href="#Dev"><span class="tocnumber">1.5</span> <span class="toctext">Dev</span></a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
     <h2>
-      <span class="mw-headline" id="PageBanner">PageBanner</span>
-    </h2>
-    <p>
-      Page banner should display at the top of the page with the following features:
-    </p>
-    <ul>
-      <li>
-        Image from <a href="https://en.wikivoyage.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Earth</a>
-      </li>
-      <li>
-        Icons of "Previous destination of the month" and "Star article"
-      </li>
-      <li>
-        Table of contents at bottom of image
-      </li>
-      <li>
-        Title of <code>Wikivoyage Diagnostics</code>
-      </li>
-      <li>
-        Tooltip of <code>Various diagnostics for Wikivoyage-specific features</code>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="GeoCrumbs">GeoCrumbs</span>
-    </h2>
-    <p>
-      <code>source: {{#isin:Region A}}</code>
-    </p>
-    <p>
-      "Region A" should appear beneath title
-    </p>
-    <h2>
-      <span class="mw-headline" id="Related_Articles">Related Articles</span>
-    </h2>
-    <p>
-      <code>source: {{#related:Page_A &amp;&amp; Page A}}{{#related:Page_B &amp;&amp; Page_B}}{{#related:Page_C}}</code>
-    </p>
-    <p>
-      Sidebar should show "Related pages" and links for the following:
-    </p>
-    <ul>
-      <li>
-        Page A
-      </li>
-      <li>
-        Page B
-      </li>
-      <li>
-        Page C
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Related_Sites">Related Sites</span>
-    </h2>
-    <p>
-      <code>source: [[dmoz:Page A]] [[commons:Page A]]</code> Sidebar should show "Related sites" and links for the following:
-    </p>
-    <ul>
-      <li>
-        DMOZ
-      </li>
-      <li>
-        Wikimedia Commons
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Insider">Insider</span>
-    </h2>
-    <p>
-      <code>source: {{#insider:Insider A}}</code>
-    </p>
-    <p>
-      Sidebar should show "Destination Docents" and links for the following:
-    </p>
-    <ul>
-      <li>
-        Insider A
-      </li>
-      <li>
-        About Docents
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="TOC_test">TOC test</span>
+      <span class="mw-headline" id="v3.7.2.1_.282017-07-10.29">v3.7.2.1 (2017-07-10)</span>
     </h2>
     <h3>
-      <span class="mw-headline" id="TOC_test_1">TOC test 1</span>
+      <span class="mw-headline" id="Wiki">Wiki</span>
     </h3>
-    <h4>
-      <span class="mw-headline" id="TOC_test_11">TOC test 11</span>
-    </h4>
-    <h5>
-      <span class="mw-headline" id="TOC_test_111">TOC test 111</span>
-    </h5>
-    <h6>
-      <span class="mw-headline" id="TOC_test_1111">TOC test 1111</span>
-    </h6>
-    <h6>
-      <span class="mw-headline" id="TOC_test_1112">TOC test 1112</span>
-    </h6>
+    <ul>
+      <li>
+        Wiki: Publish Haitian wikis. {requested by NickRance}
+      </li>
+    </ul>
     <h3>
-      <span class="mw-headline" id="TOC_test_2">TOC test 2</span>
+      <span class="mw-headline" id="PC">PC</span>
     </h3>
+    <p>
+      <b>major</b>
+    </p>
+    <ul>
+      <li>
+        Import: Fix 2016-07 English Wikipedia import failing.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Search for "PRIMARY KEY" if "UNIQUE KEY" is missing.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        HtmlView: Support Table Of Contents.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Import: Include mwad (MediaWiki API dump) for creating XML dumps for Wikia and other wikis. {contributed by Mattze96}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Import/mwad.html" id="xolnki_2" title="App/Import/mwad">App/Import/mwad</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Install: Require Java 1.7, not Java 1.8. [broken since: v3.3.4.1]
+      </li>
+    </ul>
+    <p>
+      <b>minor</b>
+    </p>
+    <ul>
+      <li>
+        Wikibase: Fix script error for "Module:Wikidata:500 unknown datavalue type." on many ht.w pages.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Change "wikibase-entityid" to "wikibase-item".
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Example</span>: Erreur de script: =Module:Wikidata:500 unknown datavalue type..
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://ht.wikipedia.org/wiki/Srilanka" rel="nofollow" class="external free">https://ht.wikipedia.org/wiki/Srilanka</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Wikibase: Show specieswiki links in "In Other Languages". [broken since: v3.6.4.1]
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Change "specieswiki" abbreviation from ".species" to "species".
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Special: Enable delete on Special:XowaWikiInfo.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaWikiInfo%3Fwiki%3Dsimple.wikipedia.org.html" id="xolnki_3" title="Special:XowaWikiInfo?wiki=simple.wikipedia.org" class="xowa-visited">Special:XowaWikiInfo?wiki=simple.wikipedia.org</a>
+      </dd>
+    </dl>
+    <p>
+      <b>trivial</b>
+    </p>
+    <ul>
+      <li>
+        Wikibase: Add "jamwiki" to list of known wikis.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Lang: Add new languages: aeb-arab; aeb-latn; dty; gor; lki; olo.
+      </li>
+    </ul>
     <h3>
-      <span class="mw-headline" id="TOC_test_3">TOC test 3</span>
+      <span class="mw-headline" id="Server">Server</span>
     </h3>
+    <p>
+      <b>major</b>
+    </p>
+    <ul>
+      <li>
+        HTTP Server: Fix images not showing when using "text" databases. [broken since: v3.6.3.4] {detected by ve3lst}
+      </li>
+    </ul>
+    <h3>
+      <span class="mw-headline" id="Android">Android</span>
+    </h3>
+    <p>
+      <b>minor</b>
+    </p>
+    <ul>
+      <li>
+        HtmlView: Ignore Table of Content markers.
+      </li>
+    </ul>
+    <h3>
+      <span class="mw-headline" id="Dev">Dev</span>
+    </h3>
+    <ul>
+      <li>
+        Php_parser: Parse "[" and "]" as array.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Example</span>: ['a', 'b'] == array('a', 'b').
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Source: Make parser code thread safe.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Source: Change Scrib_core from static to instance.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Source: Refactor Xoa_ttl.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Source: Consolidate Redirect methods on Page.
+      </li>
+    </ul>
   
     </div>
   </div>
